--- a/src/css/app.css
+++ b/src/css/app.css
@@ -108,6 +108,10 @@ fieldset {
       margin-top: -5px;
       letter-spacing: 2px; }
 
+svg path {
+  stroke-width: 2;
+  fill-opacity: 0.50; }
+
 .button-active {
   fill-opacity: 1;
   stroke: black; }
