--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -9,11 +9,15 @@
 body {
   height: 100vh;
   width: 100vw;
+  min-height: 610px;
+  min-width: 610px;
+  position: relative;
 }
 
 .game-button-container {
-  position: relative;
   z-index: 25;
+  min-height: 610px;
+  min-width: 610px;
 }
 
 fieldset {
@@ -21,8 +25,8 @@ fieldset {
   color: #555;
   position: absolute;
   display: block;
-  top: calc(50% - 308px);
-  left: calc(50% - 125px);
+  top: 0;
+  left: 0;
   min-width: 245px;
   min-height: 245px;
   width: 245px;
@@ -65,6 +69,10 @@ fieldset {
     }
     input[type=range] {
       width: 100%;
+      -webkit-appearance: none;
+      &:focus {
+        outline: none;
+      }
       &:active {
         outline: none;
         border: none;
@@ -126,13 +134,39 @@ fieldset {
       font-size: .8rem;
     }
     #counter-display {
-      position: relative;
+      // position: relative;
       font-size: 2rem;
       margin-top: -5px;
       letter-spacing: 2px;
     }
   }
 }
+
+#speed::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 25px;
+  height: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: -8px;
+  background: darkgray;
+}
+
+
+#speed::-webkit-slider-runnable-track {
+  height: 2px;
+  background-color: #ccc;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: all .3s;
+}
+
+#speed:focus::-webkit-slider-runnable-track {
+  transition: all .3s;
+  background-color: #ccc;
+}
+
+
 svg path {
   stroke-width: 2;
   fill-opacity: 0.50;
